# kouta

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  _2home_2runner_2work_2kouta_2kouta_2include_2kouta_2utils_2enum-set_8hpp-example.html  annotated.html  annotated_dup.js  asio_8hpp_8in.html  base-callback_8hpp.html  base-callback_8hpp.js  base-callback_8hpp__dep__incl.map  base-callback_8hpp__dep__incl.md5  base-callback_8hpp__incl.map  base-callback_8hpp__incl.md5  base-package_8md.html  base-test_8cpp.html  base-test_8cpp.js  base-test_8cpp__incl.map  base-test_8cpp__incl.md5  base_8hpp.html  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.map  base_8hpp__incl.md5  branch_8hpp.html  branch_8hpp.js  branch_8hpp__dep__incl.map  branch_8hpp__dep__incl.md5  branch_8hpp__incl.map  branch_8hpp__incl.md5  callback-list_8hpp.html  callback-list_8hpp.js  callback-list_8hpp__dep__incl.map  callback-list_8hpp__dep__incl.md5  callback-list_8hpp__incl.map  callback-list_8hpp__incl.md5  callback_8hpp.html  callback_8hpp.js  (+373 more)
cmake/: helper.cmake
docs/: base-package.md  introduction.md  io-package.md  utils-package.md
include/kouta/: base.hpp  db.hpp  http.hpp  io.hpp  utils.hpp
include/kouta/base/: asio.hpp.in  branch.hpp  callback.hpp  component.hpp  root.hpp  timer.hpp
include/kouta/base/callback/: base-callback.hpp  callback-list.hpp  deferred-callback.hpp  direct-callback.hpp
include/kouta/db/: abstract-adapter.hpp  client.hpp  page.hpp  result-code.hpp  result.hpp  utils.hpp
include/kouta/db/detail/: sqlite-params.hpp
include/kouta/db/error/: sqlite.hpp
include/kouta/db/migration/: abstract-version.hpp  migration-manager.hpp
include/kouta/db/params/: sqlite-params.hpp
include/kouta/db/query/: condition-group.hpp  query-builder.hpp  where-builder.hpp
include/kouta/http/: method.hpp
include/kouta/http/server/: context.hpp  handler-flow.hpp  server.hpp  worker.hpp
include/kouta/io/: packer.hpp  parser.hpp  timer.hpp
include/kouta/utils/: enum-set.hpp  ilogger.hpp  logger-aware.hpp
kouta/: base.hpp
kouta/base/: CMakeLists.txt  callback.hpp  component.cpp  component.hpp  root.cpp  root.hpp  worker.hpp
kouta/base/callback/: base-callback.hpp  deferred.hpp  direct.hpp  list.hpp
kouta/base/test/: base-test.cpp  dummy-component.cpp  dummy-component.hpp
kouta/http/: CMakeLists.txt  method.hpp
kouta/http/server/: config.hpp  context.hpp  handler-flow.hpp  handler.hpp  request.cpp  request.hpp  response.hpp  router.cpp  router.hpp  server.hpp  worker.hpp
kouta/io/: CMakeLists.txt  packer.cpp  packer.hpp  parser.cpp  parser.hpp  timer.cpp  timer.hpp
kouta/io/test/: packer-test.cpp  parser-test.cpp  timer-test.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  (+29 more)
src/: base.cpp  db.cpp  io.cpp  utils.cpp
src/db/: abstract-adapter.cpp  client.cpp
tests/: CMakeLists.txt
tests/base/: dummy-component.cpp  dummy-component.hpp  test-base.cpp  test-timer.cpp
tests/db/: test-migration.cpp  test-query-builder.cpp  test-sqlite.cpp
tests/io/: test-packer.cpp  test-parser.cpp  test-timer.cpp
tests/utils/: test-enum-set.cpp  test-logger-aware.cpp
